[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme-lib = "0.9.1"
aes-gcm = "0.10.3"
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive", "env"] }
dotenvy = "0.15.7"
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = "0.26.0"
