[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
highway = "1.1.0"
kanal = "0.1.0-pre8"
rustls = "0.23.3"
rustls-pemfile = "2.1.1"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
