[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
highway = "1.1.0"
kanal = "0.1.0-pre8"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-rustls = { version = "0.26.0", features = ["ring", "logging", "tls12"], default-features = false }
utils = { path = "../utils" }

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
