[package]
name = "sni-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
etherparse = "0.15.0"
hex = "0.4.3"
hkdf = "0.12.4"
pcap-parser = "0.16.0"
rustls = "0.23.12"
s2n-quic-core = "0.45.0"
s2n-quic-crypto = "0.45.0"
sha2 = "0.10.8"
tquic = { version = "1.1.0", default-features = false }
