[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
rustls-pemfile = "2.1.3"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["io-util", "net", "fs", "sync", "signal", "time", "macros"] }
tokio-rustls = { version = "0.26.0", features = ["ring", "logging", "tls12"], default-features = false }
rustls = { version = "0.23.12", default-features = false, features = ["std"] }
