[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
rustls-pemfile = "2.2.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["io-util", "net", "fs", "sync", "signal", "time", "macros"] }
tokio-rustls = { version = "0.26.2", features = ["ring", "logging", "tls12"], default-features = false }
rustls = { version = "0.23.25", default-features = false, features = ["std"] }
